# pop

./: .gitignore  README.md  pyproject.toml  services.yaml
.github/workflows/: ci.yml  release.yml
examples/: pop.yaml
playbooks/: basic.yaml  deploy.yaml  docker.yaml  nginx.yaml
pop/: __init__.py  bachelor.py  cli.py  commands.py  config.py  dev.py  dreamwave.py  hermes.py  server.py  services.py
tests/: conftest.py  test_bachelor.py  test_commands.py  test_config.py  test_dev.py  test_dreamwave.py  test_hello.py  test_services.py
